added animation of the bboy and the cards aroud him

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="header__wrapper">
-          <img src="/src/img/logo.png" alt="logo" class="header__logo" />
+          <img src="/src/img/logo.svg" alt="logo" class="header__logo" />
           <div class="header__nav-container">
             <nav class="header__nav">
               <ul>
@@ -47,10 +47,58 @@
               distribution of letters as opposed.
             </p>
             <button class="button-start promo__button">Get Started Now</button>
-            <img src="/src/img/cross.png" alt="rotating figure" class="promo__cross">
+            <img
+              src="/src/img/cross.svg"
+              alt="rotating figure"
+              class="promo__cross"
+            />
           </div>
-          <div class="promo__boy">
-            <img src="/src/img/hole.svg" alt="hole" class="promo__hole">
+          <div class="promo__boy-container">
+            <img src="/src/img/hole.svg" alt="hole" class="promo__hole" />
+            <img src="/src/img/boy.svg" alt="boy" class="promo__boy" />
+            <img src="/src/img/joy.svg" alt="joy" class="promo__joy" />
+            <div class="promo__card promo__card-glasses">
+              <div class="promo__card-description">
+                <h3 class="promo__card-title">
+                  Sony Dualshock 4 Wireless Controller
+                </h3>
+                <h4 class="promo__card-subtitle">$50 Per Hour</h4>
+                <div class="promo__card-rate">
+                  <img
+                    src="/src/img/stars.svg"
+                    alt="stars"
+                    class="promo__card-stars"
+                  />
+                  <p class="promo__card-review">125+Review</p>
+                </div>
+              </div>
+              <img
+                src="/src/img/glasses.svg"
+                alt="game glasses"
+                class="promo__card-img"
+              />
+            </div>
+            <div class="promo__card promo__card-controller">
+              <img
+                src="/src/img/controller.svg"
+                alt="game controller"
+                class="promo__card-img"
+              />
+              <div class="promo__card-description">
+                <h3 class="promo__card-title">
+                  Sony Dualshock 4 Wireless Controller
+                </h3>
+                <h4 class="promo__card-subtitle">$50 Per Hour</h4>
+                <div class="promo__card-rate">
+                  <img
+                    src="/src/img/stars.svg"
+                    alt="stars"
+                    class="promo__card-stars"
+                  />
+                  <p class="promo__card-review">125+Review</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
