replace button with anchor and add animation

--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
       <div class="container">
         <div class="header__wrapper">
           <img src="/src/img/logo.svg" alt="logo" class="header__logo" />
-          <div class="header__nav-container">
-            <nav class="header__nav">
-              <ul>
-                <li><a href="#" class="header__nav-link">Home</a></li>
-                <li><a href="#" class="header__nav-link">About Us</a></li>
-                <li><a href="#" class="header__nav-link">Prices</a></li>
-                <li><a href="#" class="header__nav-link">Rules</a></li>
-              </ul>
-            </nav>
-            <button class="button-start">Get Started Now</button>
-          </div>
+          <nav class="header__nav">
+            <ul>
+              <li><a href="#" class="header__nav-link">Home</a></li>
+              <li><a href="#" class="header__nav-link">About Us</a></li>
+              <li><a href="#" class="header__nav-link">Prices</a></li>
+              <li><a href="#" class="header__nav-link">Rules</a></li>
+            </ul>
+            <a class="button-start" href="#">Get Started Now</a>
+          </nav>
         </div>
       </div>
     </header>
@@ -46,7 +44,7 @@
               point of using Lorem Ipsum is that it has a more-or-less normal
               distribution of letters as opposed.
             </p>
-            <button class="button-start promo__button">Get Started Now</button>
+            <a href="#" class="button-start promo__button">Get Started Now</a>
             <img
               src="/src/img/cross.svg"
               alt="rotating figure"
