add glasses section and ui text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header class="header">
       <div class="container">
         <div class="header__wrapper">
-          <a href="#" class="header__logo-link">          <img src="/src/img/logo.svg" alt="logo" class="header__logo" />
+          <a href="#" class="header__logo-link">
+            <img src="/src/img/logo.svg" alt="logo" class="header__logo" />
           </a>
           <nav id="nav" class="header__nav">
             <ul>
@@ -36,29 +37,29 @@
       <div class="container">
         <div class="promo__wrapper">
           <div class="promo__text">
-            <h1 class="promo__title">Gaming Consoles</h1>
-            <h2 class="promo__subtitle">
+            <h2 class="title promo__title">Gaming Consoles</h2>
+            <h3 class="subtitle promo__subtitle">
               Try It, Rent It, <br /><span class="promo__subtitle_text-blue"
                 >Save <span>$50</span>!</span
               >
-            </h2>
-            <p class="promo__description">
+            </h3>
+            <p class="description promo__description">
               It is a long established fact that a reader will be distracted by
               the readable content of a page when looking at its layout. The
               point of using Lorem Ipsum is that it has a more-or-less normal
               distribution of letters as opposed.
             </p>
-            <a href="#" class="button-start promo__button">Get Started Now</a>
+            <a href="#" class="button-start promo__btn">Get Started Now</a>
             <img
-              src="/src/img/cross.svg"
+              src="/src/img/promo/cross.svg"
               alt="rotating figure"
               class="promo__cross"
             />
           </div>
           <div class="promo__boy-container">
-            <img src="/src/img/hole.svg" alt="hole" class="promo__hole" />
-            <img src="/src/img/boy.svg" alt="boy" class="promo__boy" />
-            <img src="/src/img/joy.svg" alt="joy" class="promo__joy" />
+            <img src="/src/img/promo/hole.svg" alt="hole" class="promo__hole" />
+            <img src="/src/img/promo/boy.svg" alt="boy" class="promo__boy" />
+            <img src="/src/img/promo/joy.svg" alt="joy" class="promo__joy" />
             <div class="promo__card promo__card-glasses">
               <div class="promo__card-description">
                 <h3 class="promo__card-title">
@@ -67,7 +68,7 @@
                 <h4 class="promo__card-subtitle">$50 Per Hour</h4>
                 <div class="promo__card-rate">
                   <img
-                    src="/src/img/stars.svg"
+                    src="/src/img/promo/stars.svg"
                     alt="stars"
                     class="promo__card-stars"
                   />
@@ -75,14 +76,14 @@
                 </div>
               </div>
               <img
-                src="/src/img/glasses.svg"
+                src="/src/img/promo/glasses.svg"
                 alt="game glasses"
                 class="promo__card-img"
               />
             </div>
             <div class="promo__card promo__card-controller">
               <img
-                src="/src/img/controller.svg"
+                src="/src/img/promo/controller.svg"
                 alt="game controller"
                 class="promo__card-img"
               />
@@ -93,7 +94,7 @@
                 <h4 class="promo__card-subtitle">$50 Per Hour</h4>
                 <div class="promo__card-rate">
                   <img
-                    src="/src/img/stars.svg"
+                    src="/src/img/promo/stars.svg"
                     alt="stars"
                     class="promo__card-stars"
                   />
@@ -105,6 +106,39 @@
         </div>
       </div>
     </section>
+
+    <section class="glasses">
+      <div class="container">
+        <div class="glasses__wrapper">
+          <div class="glasses__animation-scene">
+            <img
+              src="/src/img/glasses/game-men.svg"
+              alt="boy play console"
+              class="glasses__img-boy"
+            />
+            <img
+              src="/src/img/glasses/screen.svg"
+              alt="screen"
+              class="glasses__img-screen"
+            />
+          </div>
+          <div class="glasses__text">
+            <h2 class="title glasses__title">About VR Glasses</h2>
+            <h3 class="subtitle glasses__subtitle">
+              The New VR Glasses Series
+            </h3>
+            <p class="description glasses__description">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout. The
+              point of using Lorem Ipsum is that it has a more-or-less normal
+              distribution of letters as opposed.
+            </p>
+            <a href="#" class="button-start glasses__btn">Get Started Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
