add console section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li><a href="#" class="header__nav-link">Prices</a></li>
               <li><a href="#" class="header__nav-link">Rules</a></li>
             </ul>
-            <a class="button-start" href="#">Get Started Now</a>
+            <a class="button" href="#">Get Started Now</a>
           </nav>
           <button id="burger" class="header__burger-btn">
             <span class="header__burger-line"></span>
@@ -49,7 +49,7 @@
               point of using Lorem Ipsum is that it has a more-or-less normal
               distribution of letters as opposed.
             </p>
-            <a href="#" class="button-start promo__btn">Get Started Now</a>
+            <a href="#" class="button promo__btn">Get Started Now</a>
             <img
               src="/src/img/promo/cross.svg"
               alt="rotating figure"
@@ -133,7 +133,42 @@
               point of using Lorem Ipsum is that it has a more-or-less normal
               distribution of letters as opposed.
             </p>
-            <a href="#" class="button-start glasses__btn">Get Started Now</a>
+            <a href="#" class="button glasses__btn">Get Started Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="console">
+      <div class="container">
+        <div class="console__wrapper">
+          <div class="console__text">
+            <h2 class="title">About XBOX, PS</h2>
+            <h2 class="subtitle console__subtitle">The New Xbox, Ps Series</h2>
+            <p class="description console__description">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout. The
+              point of using Lorem Ipsum is that it has a more-or-less normal
+              distribution of letters as opposed.
+            </p>
+            <a href="#" class="button console__btn">Get Started Now</a>
+          </div>
+          <div class="console__animation-scene">
+            <img
+              src="/src/img/console/joystick.svg"
+              alt="joystick"
+              class="console__joystick"
+            />
+            <img
+              src="/src/img/console/small-wheel.svg"
+              alt="small wheel"
+              class="console__small-wheel"
+            />
+            <img
+              src="/src/img/console/big-wheel.svg"
+              alt="big wheel"
+              class="console__big-wheel"
+            />
           </div>
         </div>
       </div>
