--- a/index.html
+++ b/index.html
@@ -174,6 +174,57 @@
       </div>
     </section>
 
+    <section class="pricing">
+      <div class="container">
+        <h2 class="title pricing__title">Our Pricing</h2>
+        <h3 class="subtitle pricing__subtitle">Choose Your Plan</h3>
+        <div class="pricing__wrapper">
+          <div class="pricing__card">
+            <h4 class="pricing__card-title">Basic</h4>
+            <h5 class="pricing__card-subtitle">
+              <span class="pricing__card-subtitle_l">$</span>50.00 <span class="pricing__card-subtitle_m">/ Per Hour</span>
+            </h5>
+            <ul class="pricing__card-list">
+              <li class="pricing__card-item">10 users included</li>
+              <li class="pricing__card-item">2 GB of storage</li>
+              <li class="pricing__card-item">Email support</li>
+              <li class="pricing__card-item">Help center access</li>
+              <li class="pricing__card-item">10 users included</li>
+            </ul>
+            <a href="#" class="button pricing__card-btn">Select This Plan</a>
+          </div>
+          <div class="pricing__card">
+            <h4 class="pricing__card-title">Standard</h4>
+            <h5 class="pricing__card-subtitle">
+              <span class="pricing__card-subtitle_l">$</span>95.00 <span class="pricing__card-subtitle_m">/ Per Hour</span>
+            </h5>
+            <ul class="pricing__card-list">
+              <li class="pricing__card-item">10 users included</li>
+              <li class="pricing__card-item">2 GB of storage</li>
+              <li class="pricing__card-item">Email support</li>
+              <li class="pricing__card-item">Help center access</li>
+              <li class="pricing__card-item">10 users included</li>
+            </ul>
+            <a href="#" class="button pricing__card-btn">Select This Plan</a>
+          </div>
+          <div class="pricing__card">
+            <h4 class="pricing__card-title">Premium</h4>
+            <h5 class="pricing__card-subtitle">
+              <span class="pricing__card-subtitle_l">$</span>120.00 <span class="pricing__card-subtitle_m">/ Per Hour</span>
+            </h5>
+            <ul class="pricing__card-list">
+              <li class="pricing__card-item">10 users included</li>
+              <li class="pricing__card-item">2 GB of storage</li>
+              <li class="pricing__card-item">Email support</li>
+              <li class="pricing__card-item">Help center access</li>
+              <li class="pricing__card-item">10 users included</li>
+            </ul>
+            <a href="#" class="button pricing__card-btn">Select This Plan</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
