add responsive layout for pricing section and card selection logic

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <li class="pricing__card-item">Help center access</li>
               <li class="pricing__card-item">10 users included</li>
             </ul>
-            <a href="#" class="button pricing__card-btn">Select This Plan</a>
+            <button class="button pricing__card-btn">Select This Plan</button>
           </div>
           <div class="pricing__card">
             <h4 class="pricing__card-title">Standard</h4>
@@ -205,7 +205,7 @@
               <li class="pricing__card-item">Help center access</li>
               <li class="pricing__card-item">10 users included</li>
             </ul>
-            <a href="#" class="button pricing__card-btn">Select This Plan</a>
+            <button class="button pricing__card-btn">Select This Plan</button>
           </div>
           <div class="pricing__card">
             <h4 class="pricing__card-title">Premium</h4>
@@ -219,7 +219,7 @@
               <li class="pricing__card-item">Help center access</li>
               <li class="pricing__card-item">10 users included</li>
             </ul>
-            <a href="#" class="button pricing__card-btn">Select This Plan</a>
+            <button class="button pricing__card-btn">Select This Plan</button>
           </div>
         </div>
       </div>
