add footer section and animation for logo

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
           <div class="pricing__card">
             <h4 class="pricing__card-title">Basic</h4>
             <h5 class="pricing__card-subtitle">
-              <span class="pricing__card-subtitle_l">$</span>50.00 <span class="pricing__card-subtitle_m">/ Per Hour</span>
+              <span class="pricing__card-subtitle_l">$</span>50.00
+              <span class="pricing__card-subtitle_m">/ Per Hour</span>
             </h5>
             <ul class="pricing__card-list">
               <li class="pricing__card-item">10 users included</li>
@@ -196,7 +197,8 @@
           <div class="pricing__card">
             <h4 class="pricing__card-title">Standard</h4>
             <h5 class="pricing__card-subtitle">
-              <span class="pricing__card-subtitle_l">$</span>95.00 <span class="pricing__card-subtitle_m">/ Per Hour</span>
+              <span class="pricing__card-subtitle_l">$</span>95.00
+              <span class="pricing__card-subtitle_m">/ Per Hour</span>
             </h5>
             <ul class="pricing__card-list">
               <li class="pricing__card-item">10 users included</li>
@@ -210,7 +212,8 @@
           <div class="pricing__card">
             <h4 class="pricing__card-title">Premium</h4>
             <h5 class="pricing__card-subtitle">
-              <span class="pricing__card-subtitle_l">$</span>120.00 <span class="pricing__card-subtitle_m">/ Per Hour</span>
+              <span class="pricing__card-subtitle_l">$</span>120.00
+              <span class="pricing__card-subtitle_m">/ Per Hour</span>
             </h5>
             <ul class="pricing__card-list">
               <li class="pricing__card-item">10 users included</li>
@@ -224,6 +227,24 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <a href="#" class="footer__logo-link"
+            ><img src="/src/img/logo.svg" alt="logo" class="footer__logo"
+          /></a>
+          <p class="footer__text">
+            Copyright © 2022 HEALAS.LT. All Rights Reserved.
+          </p>
+          <div class="footer__icons">
+            <a class="footer__icon-link" href="#"><i class="icon-facebook footer__icon"></i></a>
+            <a class="footer__icon-link" href="#"><i class="icon-twitter footer__icon"></i></a>
+            <a class="footer__icon-link" href="#"><i class="icon-instagram footer__icon"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="module" src="/src/js/main.js"></script>
   </body>
